--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,8 @@
   --black: hsl(0, 0%, 0%);
   --dark-gray: hsl(0, 0%, 55%);
   --very-dark-gray: hsl(0, 0%, 41%);
+  --alata: "Alata", sans-serif;
+  --josefin-sans: "Josefin Sans", sans-serif;
   font-size: 15px;
 }
 
