--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,8 @@
 }
 
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: var(--alata);
+  font-weight: 400;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
