add hamburger menu and state store

--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,13 @@
 }
 
 * {
-  font-family: var(--alata);
-  font-weight: 400;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
+  font-family: var(--alata);
+  font-weight: 400;
 }
 a {
   text-decoration: none;
